added an exoplanet model in the wrong branch lol

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "code-for-coffee",
   "license": "MIT",
   "devDependencies": {
+    "gulp": "^3.9.0",
     "jasmine": "^2.3.2"
   }
 }
