--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-es6-transpiler": "^1.0.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.3.4",
     "jasmine": "^2.3.2"
   }
 }
