--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4",
     "jasmine": "^2.3.2"
-  }
+  },
+  "repository": "https://github.com/code-for-coffee/exoplanetJs"
 }
