--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exoplanet.js",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "description": "Collection of Javascript files and functions for use with Exoplanet data parsing/rendering/conversion. ",
   "main": "app.js",
   "scripts": {
@@ -17,12 +17,19 @@
   "author": "code-for-coffee",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^5.8.22",
+    "babelify": "^6.1.3",
+    "browserify": "^11.0.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-es6-transpiler": "^1.0.1",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4",
-    "jasmine": "^2.3.2"
+    "jasmine": "^2.3.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.3.1"
   },
   "repository": "https://github.com/code-for-coffee/exoplanetJs"
 }
