--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Collection of Javascript files and functions for use with Exoplanet data parsing/rendering/conversion. ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./app/app.js",
+    "test": "node_modules/.bin/jasmine-node spec"
   },
   "keywords": [
     "exoplanet",
@@ -18,18 +19,23 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^5.8.22",
-    "babelify": "^6.1.3",
-    "browserify": "^11.0.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^6.4.0",
+    "browserify": "^11.2.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-es6-transpiler": "^1.0.1",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-watch": "^4.3.4",
+    "gulp-uglify": "^1.5.1",
+    "gulp-watch": "^4.3.5",
     "jasmine": "^2.3.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1"
   },
-  "repository": "https://github.com/code-for-coffee/exoplanetJs"
+  "repository": "https://github.com/code-for-coffee/exoplanetJs",
+  "dependencies": {
+    "jasmine-node": "^1.14.5"
+  }
 }
