--- a/package.json
+++ b/package.json
@@ -18,21 +18,15 @@
   "author": "code-for-coffee",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^5.8.22",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babelify": "^6.4.0",
-    "browserify": "^11.2.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-es6-transpiler": "^1.0.1",
-    "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.5.1",
     "gulp-watch": "^4.3.5",
     "jasmine": "^2.3.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.1"
+    "vinyl-source-stream": "^1.1.0"
   },
   "repository": "https://github.com/code-for-coffee/exoplanetJs",
   "dependencies": {
